force-app/main/default/objects/Employee_Contract__c/Employee_Contract__c.object-meta.xml
<CustomObject>
    <label>Employee Contract</label>
    <nameField>
        <displayFormat>ECT-{000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Contract</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>