force-app/main/default/objects/Employee_Contract__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <defaultValue>&quot;6th Floor, 37 Huynh Tinh Cua Street, District 3, HCMC, Vietnam&quot;</defaultValue>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>