force-app/main/default/objects/Employee_Contract__c/fields/Article01__c.field-meta.xml
<CustomField>
    <fullName>Article01__c</fullName>
    <label>Article 01</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>