force-app/main/default/objects/Employee_Contract__c/fields/Article02__c.field-meta.xml
<CustomField>
    <fullName>Article02__c</fullName>
    <label>Article 02</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>