force-app/main/default/objects/Employee_Contract__c/fields/Article05__c.field-meta.xml
<CustomField>
    <fullName>Article05__c</fullName>
    <label>Article 05</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>