force-app/main/default/objects/Employee_Contract__c/fields/Article_04__c.field-meta.xml
<CustomField>
    <fullName>Article_04__c</fullName>
    <label>Article 04</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>