force-app/main/default/objects/Employee_Contract__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <formula>Employeename__r.Position__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Position</label>
    <type>Text</type>
</CustomField>