force-app/main/default/objects/Employee_Contract__c/fields/Employeename__c.field-meta.xml
<CustomField>
    <fullName>Employeename__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Contract</relationshipLabel>
    <relationshipName>Employee_Contract</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>