force-app/main/default/objects/Employee_Contract__c/fields/EmployeeProcess__c.field-meta.xml
<CustomField>
    <fullName>EmployeeProcess__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Process</label>
    <referenceTo>Employee_Process__c</referenceTo>
    <relationshipLabel>Employee Contract</relationshipLabel>
    <relationshipName>Employee_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>