force-app/main/default/objects/Employee_Contract__c/fields/Enddate__c.field-meta.xml
<CustomField>
    <fullName>Enddate__c</fullName>
    <defaultValue>TODAY()  + 365</defaultValue>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>