force-app/main/default/objects/Employee_Contract__c/fields/MrMs__c.field-meta.xml
<CustomField>
    <fullName>MrMs__c</fullName>
    <formula>Employeename__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mr./Ms.</label>
    <type>Text</type>
</CustomField>