force-app/main/default/objects/Employee_Contract__c/fields/RemindingDate__c.field-meta.xml
<CustomField>
    <fullName>RemindingDate__c</fullName>
    <defaultValue>Today() + 335</defaultValue>
    <label>Reminding Date</label>
    <type>Date</type>
</CustomField>