force-app/main/default/objects/Employee_Contract__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <defaultValue>&quot;DIRECTOR&quot;</defaultValue>
    <label>Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>