force-app/main/default/objects/Employee_Contract__c/fields/Type_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Employment__c</fullName>
    <label>Type of Employment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Employment</valueSetName>
    </valueSet>
</CustomField>